--- a/templates/account/line_detail.html
+++ b/templates/account/line_detail.html
@@ -6,7 +6,7 @@
         <h1>私訊對象：{{messagepoll.reader_id|name}}{% if messagepoll.read %}(已讀){% else %}(未讀){% endif %}</h1>
         <table>
             <tr>
-                <td>時間</td><td>{{message.time}}</td>
+                <td>時間</td><td>{{message.time| date:"DATE_FORMAT"}}</td>
             </tr>
             <tr>
                 <td>主旨</td> <td>{{message.title}}</td>
