--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -20,7 +20,8 @@
 				<a href="/teacher/exam/{{classroom.id}}">測驗</a>|
 				<a href="/teacher/memo/{{classroom.id}}">心得</a>|
 				<a href="/show/teacher/{{classroom.id}}">創意秀</a>|				
-				<a href="/teacher/grade/{{classroom.id}}">結算成績</a>|				
+				<a href="/teacher/grade/{{classroom.id}}">結算成績</a>|			
+				<a href="/teacher/event/{{classroom.id}}/0">事件</a>|		
             </td>
             </tr>
         {% endfor %}
