--- a/templates/account/event_admin_list.html
+++ b/templates/account/event_admin_list.html
@@ -1,9 +1,77 @@
 {% extends "base.html" %}
 {% block title %} Teachers {% endblock %}
-{% block content %}
+{% block head_ext %}
+<style class="cp-pen-styles">
+.wrapper {
+  margin: auto;
+  padding: 1em;
+  width: 900px;
+}
+ul.tabs {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+ul.tabs li {
+  border: gray solid 1px;
+  border-bottom: none;
+  float: left;
+  margin: 0 .25em 0 0;
+  padding: .25em .5em;
+}
+ul.tabs li a {
+  color: gray;
+  font-weight: bold;
+  text-decoration: none;
+}
+ul.tabs li.active {
+  background: gray;
+}
+ul.tabs li.active a {
+  color: white;
+}
+.clr {
+  clear: both;
+}
+.block article {
+    display: none;
+}
+article {
+  border-top: gray solid 1px;
+  padding: 0 1em;
+}
+</style>
+<script>
+$(function () {
+    $('ul.tabs li:first').addClass('active');
+    $('.block article').hide();
+    $('.block article:first').show();
+    $('ul.tabs li').on('click', function () {
+        $('ul.tabs li').removeClass('active');
+        $(this).addClass('active');
+        $('.block article').hide();
+        var activeTab = $(this).find('a').attr('href');
+        $(activeTab).show();
+        return false;
+    });
+});
+//# sourceURL=pen.js
+
+</script>
+{% endblock %}
 {% load tag %}
-<BR>
-搜尋記錄：
+{% block content %}
+<section class="wrapper">
+  <h1>系統事件</h1>
+  <ul class="tabs">
+    <li><a href="#tab1">事件</a></li>
+    <li><a href="#tab2">班級</a></li>
+  </ul>
+  <div class="clr"></div>
+  <section class="block">
+    <article id="tab1">
+        <BR>
+ 搜尋記錄：
     <form action="."  method="get">
       <input type="text" name = "q"><input type="submit" value="送出"/>
     </form>
@@ -25,6 +93,29 @@
         {% include "pagination.html" with page=page_obj %}
         
         <BR>
+    </article>
+    <article id="tab2">
+    <BR>
+        <table>
+        <tr>
+        <td>班級名稱</td>
+        <Td>任課教師</Td>
+        <Td>所有事件記錄</Td>
+        <Td>影片事件記錄</Td>
+        <Td>班級事件</Td>
+            
+        </tr>
+        {% for classroom in classrooms %}
+        <Tr><Td>{{classroom.name}}</Td>
+        <Td>{{classroom.teacher_id|name}}</Td>
+        <td>{{classroom.event_open}}</td>
+        <Td>{{classroom.event_video_open}}</Td>
+        <Td><a href="/account/event/admin/classroom/{{classroom.id}}">事件</a></Td>
+        </Tr>
+        {% endfor %}
+        </table>
+</article>     
+</section>
 {% endblock %}
 {% block domready %}
   $('a.event').click(function(e){
