--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -73,8 +73,8 @@ $(function () {
 {% if user.id == user_id|to_int %}
 <a href="/account/password-change"><img src="/static/images/icon_edit1.png">修改密碼</a>　
 <a href="/account/realname"><img src="/static/images/icon_edit2.png">修改姓名</a>　
-<a href="/account/school/{{request.user.id}}"><img src="/static/images/icon_edit3.png">修改學校</a>　
-<a href="/account/email/{{request.user.id}}"><img src="/static/images/icon_edit4.png">修改信箱</a><BR><BR>
+<a href="/account/school"><img src="/static/images/icon_edit3.png">修改學校</a>　
+<a href="/account/email"><img src="/static/images/icon_edit4.png">修改信箱</a><BR><BR>
 {% endif %}
   
 <section class="wrapper">
@@ -157,8 +157,10 @@ $(function () {
         <img src='/static/certificate/4/{{enroll.id}}.jpg'>
         <Br><hr>
         {% endif %}
-
         {% endfor %}    
+        {% if hour_of_code %}
+        <img src="/{{hour_of_code.picture}}">
+        {% endif %}
         </article>
     </article>
   </section>
