--- a/templates/student/bug_form.html
+++ b/templates/student/bug_form.html
@@ -6,6 +6,6 @@
                 {{ form.as_table }}
             </table>
             {% csrf_token %}
-            <input type="submit" value="Submit">
+            <input type="submit" value="送出">
         </form>
 {% endblock %}
