--- a/templates/teacher/event_list.html
+++ b/templates/teacher/event_list.html
@@ -2,6 +2,11 @@
 {% block title %} Teachers {% endblock %}
 {% block content %}
 {% load tag %}
+<h1>班級名稱：{{classroom.name}}</h1>
+        {% if is_event_open %}<a href="#" data-classroomid={{classroom.id}} data-action="close" class="event"><img src="/static/images/icon_close.png">關閉所有事件記錄</a>{% else %}<a href="#" data-classroomid={{classroom.id}}  data-action="open" class="event"><img src="/static/images/icon_open.png">開啟所有事件記錄</a>{% endif %}|
+        {% if is_event_video_open %}<a href="#"  data-classroomid={{classroom.id}} data-action="close" class="event_video"><img src="/static/images/icon_close.png">關閉影片事件記錄</a>{% else %}<a href="#"  data-classroomid={{classroom.id}} data-action="open" class="event_video"><img src="/static/images/icon_open.png">開啟影片事件記錄</a>{% endif %}|
+        <!--<a href="/account/event/clear" onclick="return confirm('確定要清除嗎?')"><img src="/static/images/icon_clear.png">清除所有事件</a>|-->
+        <a href="/teacher/event/excel/{{classroom.id}}"><img src="/static/images/icon_excel.png">下載所有事件到Excel</a>
 <BR>
 搜尋記錄：
     <form action="."  method="get">
@@ -34,6 +39,7 @@
       {
         event_open: $(launcher).data('eventopen'),
         action: $(launcher).data('action'),
+        classroomid: $(launcher).data('classroomid'),
       },
       function(data){
         if (data['status'] == 'ok')
@@ -57,10 +63,11 @@
    $('a.event_video').click(function(e){
     var launcher = this;  
     e.preventDefault();
-    $.post('/teachher/event/video/make/',
+    $.post('/teacher/event/video/make/',
       {
         event_open: $(launcher).data('eventopen'),
         action: $(launcher).data('action'),
+        classroomid: $(launcher).data('classroomid'),        
       },
       function(data){
         if (data['status'] == 'ok')
