--- a/templates/account/event_admin_classroom_list.html
+++ b/templates/account/event_admin_classroom_list.html
@@ -2,7 +2,7 @@
 {% block title %} Teachers {% endblock %}
 {% block content %}
 {% load tag %}
-<BR>
+<h1>班級名稱：{{classroom.name}}</h1>
 搜尋記錄：
     <form action="."  method="get">
       <input type="text" name = "q"><input type="submit" value="送出"/>
